# atsamd

./: Cargo.toml  README.md  crates.json  update-pacs.sh
.github/workflows/: bump-crates.yml  crate_version.py  update_changelog.py
atsamd-hal-macros/: CHANGELOG.md  Cargo.toml  devices.yaml
atsamd-hal-macros/src/: chip.rs  lib.rs  settings.rs
boards/arduino_mkr1000/: CHANGELOG.md  Cargo.toml
boards/arduino_mkrvidor4000/: CHANGELOG.md  Cargo.toml
boards/arduino_mkrzero/: CHANGELOG.md  Cargo.toml
boards/arduino_nano33iot/: CHANGELOG.md  Cargo.toml
boards/atsame54_xpro/: CHANGELOG.md  Cargo.toml
boards/circuit_playground_express/: CHANGELOG.md  Cargo.toml
boards/edgebadge/: CHANGELOG.md  Cargo.toml
boards/examples/: m4-adc.rs
boards/feather_m0/: CHANGELOG.md  Cargo.toml
boards/feather_m4/: CHANGELOG.md  Cargo.toml
boards/gemma_m0/: CHANGELOG.md  Cargo.toml
boards/grand_central_m4/: CHANGELOG.md  Cargo.toml
boards/itsybitsy_m0/: CHANGELOG.md  Cargo.toml
boards/itsybitsy_m4/: CHANGELOG.md  Cargo.toml
boards/matrix_portal_m4/: CHANGELOG.md
boards/metro_m0/: CHANGELOG.md  Cargo.toml
boards/metro_m4/: CHANGELOG.md  Cargo.toml
boards/neo_trinkey/: CHANGELOG.md
boards/neokey_trinkey/: CHANGELOG.md
boards/p1am_100/: CHANGELOG.md  Cargo.toml
boards/pfza_proto1/: CHANGELOG.md  Cargo.toml
boards/pygamer/: Cargo.toml
boards/pyportal/: CHANGELOG.md  Cargo.toml
boards/qt_py_m0/: CHANGELOG.md  Cargo.toml
boards/samd11_bare/: CHANGELOG.md  Cargo.toml
boards/samd21_mini/: Cargo.toml  (+1 more)
hal/: CHANGELOG.md  Cargo.toml
macros-test/: Cargo.toml
pac/: svd2rust.toml
(+167 files in other folders)
