[workspace]
resolver = "2"
default-members = ["hal"]
members = [
	"hal",
	"atsamd-hal-macros",
	"pac/*",
	"boards/*",
]

[profile.dev]
debug = true
opt-level = 0
lto = false

# Neopixel and USB examples rely on some timing constraints that can only be upheld
# with some optimizations enabled.
#
# Add `--profile dev-optimized` to your cargo invocations to use this profile.
[profile.dev-optimized]
inherits = "dev"
opt-level = 2
lto = "thin"


[profile.release]
lto = true
opt-level = "s"
debug = true

[workspace.dependencies]
anyhow = "1.0"
form = "0.13.0"
svd2rust = "=0.36.0"
serde = "1.0"
toml = { version = "0.8", features = ["parse", "display"] }
libxml = "0.3"
libxslt = "0.1"
regex = "1.0"
