[package]
name = "atsamd-hal-macros"
version = "0.1.0"
edition = "2021"
authors = ["Justin Beaurivage <justin@wearableavionics.com>"]
categories = ["embedded", "hardware-support", "no-std"]
description = "Procedural macros for the atsamd-hal project"
documentation = "https://docs.rs/crate/atsamd-hal-macros/"
keywords = ["no-std", "arm", "cortex-m", "embedded-hal"]
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/atsamd-rs/atsamd"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0.49"
proc-macro-error = "1.0.4"
quote = "1.0.23"
syn = { version = "2.0.48", features = ["extra-traits", "full", "fold"] }
config = "0.13.4"
serde = { version = "1.0.195", features = ["derive", "alloc"] }

[features]
samd21j = []
samd51j = []
